Deleted Rotativa to generate pdf files

--- a/La Ñata/Views/Expenses/Index.cshtml
+++ b/La Ñata/Views/Expenses/Index.cshtml
@@ -110,17 +110,13 @@
                         <i class="bi bi-plus-circle"></i>
                     </button>
                 </div>
-                @using (Html.BeginForm("Print", "Expenses", FormMethod.Get, new { @id = "formReport" }))
-                {
-                    @Html.Hidden("dates_range");
-                    <div class="sombra d-flex flex-row">
-                        <button id="printReport" class="btn" type="button" style="background-color: #e38e00; color: white">
-                            Imprimir constancia
-                            <i class="bi bi-printer" style="color: white"></i>
-                        </button>
-                    </div>
-                
-                }
+
+                <div class="sombra d-flex flex-row">
+                    <a class="btn" id="printReport" target="_blank" href="" style="background-color: #e38e00; color: white">
+                        Imprimir constancia
+                        <i class="bi bi-printer" style="color: white"></i>
+                    </a>
+                </div>
             </div>
         </div>
 
