--- a/La Ñata/Views/Expenses/Report.cshtml
+++ b/La Ñata/Views/Expenses/Report.cshtml
@@ -4,7 +4,7 @@
     double totalIncome = 0;
     double totalExpenses = 0;
 }
-@model La_Ñata.Controllers.ExpensesController.ReportViewModel
+@model Tuple<List<La_Ñata.Models.Expense>, List<La_Ñata.Models.Order>, List<DateTime>>
 
 <!DOCTYPE html>
 <html>
@@ -26,7 +26,7 @@
                     <tr class="d-flex w-100" style="border: none">
                         <td style="border: none"><img src="~/Content/Images/logo.png" alt="La Ñata" style="max-width: 300px; max-height: 100px;"></td>
                         <td class="w-100 text-end align-self-end" style="border: none">
-                            <p class="align-self-end mb-0">Reporte de gastos e ingresos entre <b>@Model.DateFrom.ToString("dd/MM/yyyy")</b> y <b>@Model.DateTo.ToString("dd/MM/yyyy")</b></p>
+                            <p class="align-self-end mb-0">Reporte de gastos e ingresos entre <b>@Model.Item3.First().ToString("dd/MM/yyyy")</b> y <b>@Model.Item3.Last().ToString("dd/MM/yyyy")</b></p>
                         </td>
                     </tr>
                 </tbody>
@@ -45,7 +45,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (La_Ñata.Models.Expense expense in Model.Expenses)
+                    @foreach (La_Ñata.Models.Expense expense in Model.Item1)
                     {
                         i++;
                         <tr  style="@(i % 2 == 0 ? "" : "background-color: #ecedee")">
@@ -81,7 +81,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var order in Model.Orders)
+                    @foreach (La_Ñata.Models.Order order in Model.Item2)
                     {
                         double? totalOrder = 0;
                         totalOrder = order.ProductOrder.Sum(po => (po.unit_price * po.quantity)) + (order.shipment_price ?? 0);
