--- a/La Ñata/Content/Site.css
+++ b/La Ñata/Content/Site.css
@@ -1,4 +1,10 @@
-﻿/* Set padding to keep content from hitting the edges */
+﻿.required::after {
+    content: ' *';
+    color: crimson;
+    font-weight: bold;
+}
+
+/* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
