--- a/La Ñata/Views/Orders/ReportWithPrice.cshtml
+++ b/La Ñata/Views/Orders/ReportWithPrice.cshtml
@@ -54,7 +54,7 @@
                         <td class="text-center" style="font-weight:600">Cantidad</td>
                         <td class="text-center" style="font-weight:600">Precio unitario</td>
                         <td class="text-center" style="font-weight:600">Precio por rotura</td>
-                        <td class="text-center" style="font-weight:600">Total</td>
+                        <td class="text-center" style="font-weight:600">Subtotal</td>
                     </tr>
                 </thead>
                 <tbody>
