--- a/La Ñata/Views/Orders/Create.cshtml
+++ b/La Ñata/Views/Orders/Create.cshtml
@@ -40,13 +40,13 @@
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div>
-            @Html.LabelFor(model => model.date, "Fecha")
+            @Html.LabelFor(model => model.date, "Fecha", new { @class = "required" })
             @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control", @id = "datepicker" } })
             @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div class="mt-2">
-            @Html.LabelFor(model => model.client_name, "Cliente")
+            @Html.LabelFor(model => model.client_name, "Cliente", new { @class = "required" })
             @Html.EditorFor(model => model.client_name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nombre y apellido" } })
             @Html.ValidationMessageFor(model => model.client_name, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="mt-2">
-            @Html.LabelFor(model => model.event_adress, "Dirección")
+            @Html.LabelFor(model => model.event_adress, "Dirección", new { @class = "required" })
             @Html.EditorFor(model => model.event_adress, new { htmlAttributes = new { @class = "form-control", @placeholder = "Lugar del evento" } })
             @Html.ValidationMessageFor(model => model.event_adress, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
