--- a/La Ñata/Views/Products/Create.cshtml
+++ b/La Ñata/Views/Products/Create.cshtml
@@ -35,26 +35,26 @@
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="mb-2">
-            @Html.LabelFor(model => model.description, "Descripción", htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.description, "Descripción", htmlAttributes: new { @class = "control-label  required" })
             @Html.TextBoxFor(model => model.description, new { @class = "form-control", @placeholder = "Nombre del producto" })
             @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div class="mb-2">
-            @Html.LabelFor(model => model.stock, "Stock", htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.stock, "Stock", htmlAttributes: new { @class = "control-label required" })
             @Html.TextBoxFor(model => model.stock, new { @class = "form-control", @type = "number" })
             @Html.ValidationMessageFor(model => model.stock, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div class="mb-2">
-            @Html.LabelFor(model => model.price, "Precio", htmlAttributes: new { @class = "control-label" })
-            @Html.TextBoxFor(model => model.price, new { @class = "form-control", @type = "number", @placeholder = "$" })
+            @Html.LabelFor(model => model.price, "Precio", htmlAttributes: new { @class = "control-label required" })
+            @Html.TextBoxFor(model => model.price, new { @class = "form-control", @type = "number", @placeholder = "$", @step = "0.01" })
             @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div class="mb-2">
-            @Html.LabelFor(model => model.break_price, "Precio por rotura", htmlAttributes: new { @class = "control-label" })
-            @Html.TextBoxFor(model => model.break_price, new { @class = "form-control", @type = "number", @placeholder = "$" })
+            @Html.LabelFor(model => model.break_price, "Precio por rotura", htmlAttributes: new { @class = "control-label required" })
+            @Html.TextBoxFor(model => model.break_price, new { @class = "form-control", @type = "number", @placeholder = "$", @step = "0.01" })
             @Html.ValidationMessageFor(model => model.break_price, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
