--- a/La Ñata/Views/Products/Edit.cshtml
+++ b/La Ñata/Views/Products/Edit.cshtml
@@ -67,19 +67,19 @@
 
         <div>
             @Html.LabelFor(model => model.stock, "Stock", htmlAttributes: new { @class = "control-label required" })
-            @Html.EditorFor(model => model.stock, new { htmlAttributes = new { @class = "form-control", @type = "number" } })
+            @Html.EditorFor(model => model.stock, new { htmlAttributes = new { @class = "form-control", @type = "number", @data_val_number = "Por favor, escriba solamente números" } })
             @Html.ValidationMessageFor(model => model.stock, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div>
             @Html.LabelFor(model => model.price, "Precio", htmlAttributes: new { @class = "control-label required" })
-            @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control", @type = "number", @step = "0.01" } })
+            @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control", @type = "number", @step = "0.01", @data_val_number = "Por favor, escriba solamente números" } })
             @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div>
             @Html.LabelFor(model => model.break_price, "Precio por rotura", htmlAttributes: new { @class = "control-label required" })
-            @Html.EditorFor(model => model.break_price, new { htmlAttributes = new { @class = "form-control", @type = "number", @step = "0.01" } })
+            @Html.EditorFor(model => model.break_price, new { htmlAttributes = new { @class = "form-control", @type = "number", @step = "0.01", @data_val_number = "Por favor, escriba solamente números" } })
             @Html.ValidationMessageFor(model => model.break_price, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
