--- a/La Ñata/Views/Orders/ReportWithPrice.cshtml
+++ b/La Ñata/Views/Orders/ReportWithPrice.cshtml
@@ -22,25 +22,25 @@
         <div class="container">
 
             @* Header *@
-            <div class="d-flex flex-row justify-content-between mb-3">
+            <div class="d-flex justify-content-center">
+                <img src="~/Content/Images/logo.png" alt="La Ñata" style="max-width: 400px; max-height: 100px;">
+            </div>
+            <div class="d-flex flex-row justify-content-between my-3">
                 <div>
-                    <img src="~/Content/Images/logo.png" alt="La Ñata" style="max-width: 400px; max-height: 100px;">
-                    <p class="my-3" style="font-family: 'Roboto', sans-serif; font-style: italic; font-weight: 700">Alquiler de sillas, mesas,<br />vajillas y mantelería</p>
-                    <p class="mb-0" style="font-family: 'Roboto', sans-serif; font-style:normal">
-                        <b>Cliente:</b> @Model.client_name <br />
-                        <b>Fecha:</b> @Model.date.ToString("dd/MM/yyyy") <br />
-                        <b>Lugar:</b> @Model.event_adress
-                    </p>
+                    <p class="mb-3" style="font-family: 'Roboto', sans-serif; font-style: italic; font-weight: 700">Alquiler de sillas, mesas,<br />vajillas y mantelería</p>
+                    <p class="my-3" style="font-family: 'Roboto', sans-serif; font-style: italic; font-weight: 700">Tenemos todo para tu evento</p>
                 </div>
-                <div>
-                    <div class="p-3 mb-2 text-center" style="background-color: #c9c9c9; border-radius: 3px; print-color-adjust: exact;">
-                        <p class="text-center mb-0 fw-bold fst-italic"> COMPROBANTE DE ENTREGA <br />PARA ALQUILER DE ENSERES</p>
-                    </div>
+                <div class="d-flex align-content-start justify-content-end">
                     <p class="mb-0 text-center" style="font-family: 'Roboto', sans-serif; font-style:normal; font-weight: 700">
                         13 de Mayo - Tel: 03404-420949 / 15458425<br />
                         3013 - San Carlos Centro - Santa Fe
                     </p>
                 </div>
+            </div>
+            <div class="d-flex flex-row justify-content-evenly my-3">
+                <p class="mb-0" style="font-family: 'Roboto', sans-serif; font-style:normal"><b>Cliente:</b> @Model.client_name</p>
+                <p class="mb-0" style="font-family: 'Roboto', sans-serif; font-style:normal"><b>Fecha:</b> @Model.date.ToString("dd/MM/yyyy")</p>
+                <p class="mb-0" style="font-family: 'Roboto', sans-serif; font-style:normal"><b>Lugar:</b> @Model.event_adress</p>                
             </div>
 
             @* Detalle *@
@@ -95,15 +95,15 @@
                 </tbody>
             </table>
 
-            <table class="d-flex mb-3 mt-5 mx-auto justify-content-center" style="border: none">
-                <tbody style="border: none">
-                    <tr style="border: none">
-                        <td style="border: none">
-                            <b class="mt-0 text-center">La Ñata - Todos los derechos reservados ©</b>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            @* Footer *@
+            <div class="d-flex flex-row justify-content-end mt-5 mb-3">
+                <div class="d-flex flex-column me-5">
+                    <img src="~/Content/Images/qr_wpp.png" width="100" height="100" />
+                </div>
+                <div class="d-flex flex-column">
+                    <img src="~/Content/Images/qr_ig.png" width="130" height="140" />
+                </div>
+            </div>
         </div>
     </body>
 }
