--- a/La Ñata/Views/Orders/Details.cshtml
+++ b/La Ñata/Views/Orders/Details.cshtml
@@ -119,7 +119,7 @@
                     @* Imprimir con precio *@
                     <div class="sombra d-flex flex-row me-2">
                         <a  class="btn" target="_blank" href="../../Orders/Print/?id_order=@Model.id&price=true" style="background-color: #e38e00; color: white">
-                            Presupuesto
+                            Detalle ($)
                             <i class="bi bi-printer" style="color: white"></i>
                         </a>
                     </div>
