PDF report modified

--- a/La Ñata/Views/Orders/ReportWithoutPrice.cshtml
+++ b/La Ñata/Views/Orders/ReportWithoutPrice.cshtml
@@ -24,7 +24,7 @@
             <div class="d-flex flex-row justify-content-between mb-3">
                 <div>
                     <img src="~/Content/Images/logo.png" alt="La Ñata" style="max-width: 400px; max-height: 100px;">
-                    <p class="my-3" style="font-family: 'Roboto', sans-serif; font-style: italic; font-weight: 700">Alquiler de sillas, mesas,<br />vajillas y mantelería</p>
+                    <p class="my-3" style="font-family: 'Roboto', sans-serif; font-style: italic; font-weight: 700">Alquiler de sillas, mesas,<br />vajillas, mantelería y mobiliario</p>
                     <p class="mb-0" style="font-family: 'Roboto', sans-serif; font-style:normal">
                         <b>Cliente:</b> @Model.client_name <br />
                         <b>Fecha:</b> @Model.date.ToString("dd/MM/yyyy") <br />
