--- a/La Ñata/Views/Orders/ReportWithPrice.cshtml
+++ b/La Ñata/Views/Orders/ReportWithPrice.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="d-flex flex-row justify-content-between my-3">
                 <div>
-                    <p class="mb-3" style="font-family: 'Roboto', sans-serif; font-style: italic; font-weight: 700">Alquiler de sillas, mesas,<br />vajillas y mantelería</p>
+                    <p class="mb-3" style="font-family: 'Roboto', sans-serif; font-style: italic; font-weight: 700">Alquiler de sillas, mesas,<br />vajillas, mantelería y mobiliario</p>
                     <p class="my-3" style="font-family: 'Roboto', sans-serif; font-style: italic; font-weight: 700">Tenemos todo para tu evento</p>
                 </div>
                 <div class="d-flex align-content-start justify-content-end">
